<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deepsim_btree</name>
  <author>Amazon Web Services</author>
  <version>0.1.0</version>
  <description>Behaviour Tree library for DeepSim framework.</description>
  <maintainer email="aws-deepracer@amazon.com">AWS DeepRacer</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

  <test_depend>python3-pytest</test_depend>
</package>
