<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deepsim_envs</name>
  <author>Amazon Web Services</author>
  <version>0.1.0</version>
  <description>DeepSim RL Environment for DeepSim framework.</description>
  <maintainer email="aws-deepracer@amazon.com">AWS DeepRacer</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_srvs</depend>
  <depend>ude_ros_env</depend>
  <depend>deepsim</depend>

  <test_depend>python3-pytest</test_depend>
</package>
